smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/output-before-input.smithy
// Parse error at line 7, column 5 near `input`: Found 'i', but expected one of the following tokens: 'e' '}' | Model
$version: "2.0"
namespace smithy.example

operation GetFoo {
    output: GetFooOutput
    input: GetFooInput
}
